Рефакторинг кода. Удаление лишних файлов. Изменение получения статуса пользователя - вместо boolean теперь возвращается строка